fix title alignment in index view

--- a/app/assets/stylesheets/appointments.scss
+++ b/app/assets/stylesheets/appointments.scss
@@ -273,6 +273,3 @@
   align-items: center;
 }
 
-.users-appointments-title {
-  margin: 10px;
-}
